<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_food"
        android:textSize="18sp"
        android:id="@+id/menuList"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/foodMenu"
        android:layout_below="@+id/menuList">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textSize="16sp"
        android:id="@+id/ff"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_50"
        android:textSize="16sp"
        android:id="@+id/ck"/>

    <RadioButton
        android:id="@+id/tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/_70" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/foodMenu"
        android:text="@string/choose_number"
        android:textSize="16sp"
        android:layout_margin="16dp"/>


</RelativeLayout>